[package]
name = "libtransport-http"
version = "0.0.1"
authors = ["Samuel Marks <@SamuelMarks>"]
edition = "2018"

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
actix-rt="2.9.0"
actix-web-actors="4.2.0"
bincode = "1.0.1"
bytes = "*"
futures = "*"
log = "0.4"
serde = "1.0.80"
serde_derive = "1.0.80"
